Issue #2634: Add `UpgradeToJava17`